--- a/web01test.html
+++ b/web01test.html
@@ -4,8 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .rojo{
+            color: red;
+        }
+    </style>
 </head>
     <body>
-        prueba
+        <!-- COMENTARIOS EN IDE DE MICROSOFT
+        CONTROL + K + C
+        DESCOMENTAR:
+        CONTROL + K + U -->
+        <h1 class="rojo">Selectores JQUERY</h1>
+        <h2>Esto es una prueba</h2>
+        <button id="boton1" class="rojo">Soy un boton 1</button>
+        <button id="boton2">Soy un boton 2</button>
+        <P class="rojo">Parrafo 1</P>
+        <P class="rojo">Parrafo 2</P>
+        <P>Parrafo 3</P>
+
+        <script src="js/jquery-3.7.1.js"></script>
+        <script>
+            //AQUI NUESTRO CODIGO JQUERY
+            //LA PRIMERA LINEA SIEMPRE SERA:
+            $(document).ready(function(){
+                //AQUI DENTRO LAS PETICIONES
+                // alert("Hola Mundo");
+                // $("#boton1").
+                //PODEMOS ASOCIAR ACCIONES A LOS OBJETOS (CUANDO)
+                $("p").click(function(){
+                    //IMPRESCINDIBLE EN DESARROLLO FRONT
+                    //MENSAJES POR CONSOLA
+                    console.log("Mensaje por consola Web");
+                    // $("#boton1").hide();
+                    //EXISTE UNA PALABRA CLAVE QUE INDICA QUE
+                    //ACCEDEMOS AL OBJETO QUE HA REALIZADO LA LLAMADA: this
+                    $(this).hide();
+                })
+                 $(".rojo").click(function(){
+                    //IMPRESCINDIBLE EN DESARROLLO FRONT
+                    //MENSAJES POR CONSOLA
+                    console.log("Mensaje por consola Web");
+                    $("#boton1").hide();
+                    //EXISTE UNA PALABRA CLAVE QUE INDICA QUE
+                    //ACCEDEMOS AL OBJETO QUE HA REALIZADO LA LLAMADA: this
+                    $(this).hide();
+                })
+            });
+        </script>
     </body>
 </html>
