--- a/web11departamentosxml.html
+++ b/web11departamentosxml.html
@@ -16,6 +16,7 @@
                 <th>LOCALIDAD</th>
             </tr>
         </thead>
+        <tbody></tbody>
     </table>
     
     <script src="js/jquery-3.7.1.js"></script>
