--- a/web18cruddepartamentos.html
+++ b/web18cruddepartamentos.html
@@ -8,6 +8,17 @@
 <body>
 
     <h1>Crud departamentos XML</h1>
+    <label>Id Departamento</label>
+    <input type="number" id="cajaid"></input>
+    <label>Nombre</label>
+    <input type="text" id="cajanombre"></input>
+    <label>Localidad</label>
+    <input type="text" id="cajalocalidad"></input>
+
+    <button id="botoninsert">Insertar</button>
+    <button id="botonupdate">Modificar</button>
+    <button id="botondelete">Eliminar</button>
+
     <table id="tabladepartamentos">
         <thead>
             <tr>
@@ -29,7 +40,69 @@
 
         $(document).ready(function(){
             loadDepartamentos();
+            $("#botoninsert").click(function(){
+                let id = $("#cajaid").val();
+                let nombre = $("#cajanombre").val();
+                let localidad = $("#cajalocalidad").val();
+                //NECESITAMOS GENERAR UN STRING CON LA MISMA ESTRUCTURA
+                //QUE EL DOCUMENTO XML PARA SUS REGISTROS
+                let dataXML = getDepartamentoXML(id, nombre, localidad);
+                let request = "api/departamentos";
+                //REALIZAMOS LA PETICION CON AJAX
+                $.ajax({
+                    url: url + request,
+                    type: "POST",
+                    contentType: "text/xml",
+                    data: dataXML,
+                    success: function(){
+                        console.log("Insertado");
+                        loadDepartamentos();
+                    }
+                })
+            })
+
+            $("#botonupdate").click(function(){
+                let id = $("#cajaid").val();
+                let nombre = $("#cajanombre").val();
+                let localidad = $("#cajalocalidad").val();
+                let dataXML = getDepartamentoXML(id, nombre, localidad);
+                let request = "api/departamentos";
+                $.ajax({
+                    url: url + request,
+                    type: "PUT",
+                    contentType: "text/xml",
+                    data: dataXML,
+                    success: function(){
+                        console.log("Modificado");
+                        loadDepartamentos();
+                    }
+                })
+            })
+
+            $("#botondelete").click(function(){
+                let id = $("#cajaid").val();
+                let request = "api/departamentos/" + id;
+                $.ajax({
+                    url: url + request,
+                    type: "DELETE",
+                    success: function(){
+                        console.log("Eliminado");
+                        loadDepartamentos();
+                    }
+                })
+            })
         })
+
+        //funcion intermedia que devuelva el departamento
+        function getDepartamentoXML(id, nombre, localidad){
+            //COPIAMOS EL CODIGO DE GENERACION DEL OBJETO XML
+            let dataXML = "<Departamento>";
+                dataXML += "<IdDepartamento>" + id + "</IdDepartamento>";
+                dataXML += "<Nombre>" + nombre + "</Nombre>";
+                dataXML += "<Localidad>" + localidad + "</Localidad>";
+            dataXML += "</Departamento>";
+            return dataXML;
+        }
 
         //Metodo que carga los departamentos a la tabla
         function loadDepartamentos(){
@@ -50,8 +123,6 @@
                 $("#tabladepartamentos tbody").html(html);
             })
         }
-
-
     </script>
 </body>
 </html>
