--- a/web28edithospital.html
+++ b/web28edithospital.html
@@ -178,8 +178,8 @@
         </div>
     </nav>
     <main class="container">
-        <div class="bg-body-tertiary p-5 rounded">
-            <h1>Navbar example</h1>
+        <div><!-- class="bg-body-tertiary p-5 rounded" -->
+            <h1>Editar Hospital</h1>
             
         </div>
     </main>
