--- a/web28homehospitales.html
+++ b/web28homehospitales.html
@@ -202,26 +202,46 @@
         //Todas las páginas las denominamos web28...
         let url = "https://apicrudhospital.azurewebsites.net/";
         $(document).ready(function(){
-            let request = "webresources/hospitales";
-            $.ajax({
-                url: url + request,
-                type: "GET",
-                success: function(data){
-                    console.log("leyendo hospitales")
-                    var html = "";
-                    $.each(data, function(index, hospital){
-                        html += "<tr>";
-                            html += "<td>" + hospital.nombre + "</td>"
-                            html += "<td>" + hospital.direccion + "</td>"
-                            html += "<td>"; 
-                                html += "<a href='web28detailshospital.html?idhospital=" + hospital.idhospital + "' class='btn btn-success'>Details</a>"
-                                html += "<a href='web28edithospital.html?idhospital=" + hospital.idhospital + "' class='btn btn-info'>Edit</a>"
-                            html += "</td>";
-                        html += "</tr>";
-                    })
-                    $("#tablahospitales tbody").html(html);
-                }
-            })
+            loadHospitales();
+            //EL CODIGO DE ELIMINAR TIENE QUE ESTAR ANTES DE DIBUJAR LOS BOTONES
+            var params = new window.URLSearchParams(window.location.search);
+            var idDelete = params.get("iddelete");
+            console.log("Delete: " + idDelete);
+            if(idDelete != null){
+                var requestDelete = "/webresources/hospitales/delete/" + idDelete;
+                $.ajax({
+                    url: url + requestDelete,
+                    type: "DELETE",
+                    success: function(){
+                        console.log("Eliminando hospital: " + idDelete);
+                        loadHospitales();
+                    }
+                })
+            }
+
+            function loadHospitales(){
+                let request = "webresources/hospitales";
+                $.ajax({
+                    url: url + request,
+                    type: "GET",
+                    success: function(data){
+                        console.log("leyendo hospitales")
+                        var html = "";
+                        $.each(data, function(index, hospital){
+                            html += "<tr>";
+                                html += "<td>" + hospital.nombre + "</td>"
+                                html += "<td>" + hospital.direccion + "</td>"
+                                html += "<td>"; 
+                                    html += "<a href='web28detailshospital.html?idhospital=" + hospital.idhospital + "' class='btn btn-success m-1'>Details</a>"
+                                    html += "<a href='web28edithospital.html?idhospital=" + hospital.idhospital + "' class='btn btn-info m-1'>Edit</a>"
+                                    html += "<a href='web28homehospitales.html?iddelete=" + hospital.idhospital + "' class='btn btn-danger m-1'>Delete</a>"
+                                html += "</td>";
+                            html += "</tr>";
+                        })
+                        $("#tablahospitales tbody").html(html);
+                    }
+                })
+            }
         })
     </script>
 </body>
