--- a/web28homehospitales.html
+++ b/web28homehospitales.html
@@ -217,7 +217,9 @@
                         loadHospitales();
                     }
                 })
-            }
+            }else {
+                loadHospitales()
+            };
 
             function loadHospitales(){
                 let request = "webresources/hospitales";
